<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_fragment_bg_color"
    android:orientation="vertical"
    tools:context="com.qxmagic.railwayuserterminal.ui.mine.SettingActivity">

    <include layout="@layout/common_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/font_size_15dp"
        android:paddingStart="@dimen/font_size_15dp"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_msg_push"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16dp" />

        <com.suke.widget.SwitchButton
            android:id="@+id/setting_msg_push_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:sb_show_indicator="false" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_95a5a5_color"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/setting_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/margin_15dp"
        android:paddingStart="@dimen/margin_15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/clear_cache"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_15sp" />

        <TextView
            android:id="@+id/cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_15sp" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_d7d7d7_color" />

    <LinearLayout
        android:id="@+id/setting_check_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/margin_15dp"
        android:paddingStart="@dimen/margin_15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/check_update"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_15sp" />

        <TextView
            android:id="@+id/setting_current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_15sp" />
    </LinearLayout>

</LinearLayout>
