<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_fragment_bg_color"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/unresolved_go_next_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/font_size_15dp"
        android:paddingEnd="@dimen/font_size_15dp"
        android:paddingStart="@dimen/font_size_15dp"
        android:paddingTop="@dimen/font_size_15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/equipment_fault_icon" />

        <TextView
            android:id="@+id/unresolved_event_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/font_size_15dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/font_size_15dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/event_go_next_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_95a5a5_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/font_size_15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fault_type"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16dp" />

            <TextView
                android:id="@+id/unresolved_fault_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_size_10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_type"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16dp" />

            <TextView
                android:id="@+id/unresolved_service_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_size_10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16dp" />

            <TextView
                android:id="@+id/unresolved_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_size_10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urgency_level"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16dp" />

            <TextView
                android:id="@+id/unresolved_urgency_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_size_10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointed_person"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16dp" />

            <TextView
                android:id="@+id/unresolved_appointed_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16dp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_95a5a5_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/font_size_10dp"
        android:background="@color/gray_95a5a5_color" />
</LinearLayout>
